# Library-Management-System

.github/workflows/: django.yml
phase1-sql/: Analysis.sql  Data_Insertion.sql  ERD.drawio.xml  Table_Creation.sql  lb_system.sql
phase2-data-ingestion/: api_client.py  api_fetcher.py  data_processor.py  data_validation.py  model.py  pyproject.toml  schemas.py  settings.py  test.py
phase2-data-ingestion/csv_data/: author.csv  authors.csv  book.csv  borrowing.csv  category.csv  library.csv  member.csv  review.csv
phase3-django-api/: .env  Library Management System.postman_collection.json  pyproject.toml
phase3-django-api/lms/: .coverage
phase3-django-api/lms/lms/: settings.py  urls.py
