[project]
name = "library-management-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.5",
]
