[project]
name = "phase3-django-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.8.1",
    "drf-yasg>=1.21.10",
    "mysqlclient>=2.2.7",
    "python-decouple>=3.8",
]
